Correções gerais
Foram corrigidas algumas duplicações de Validação, agora todas as validações esão no model e no service somente regra de negocio.

Codigo do menu de check-in e check-out tava muito grande, então eu separei em sub-controllers.

Foram refaorados alguns codigos durante esse processo, e corrigidos alguns problemas que eu não tinha percebido antes.

PS: Próximo passo deve ser criar a dashboard principal com os gráficos de monitoramento do hotel